# gitstacker

./: .gitignore  Plan.md  README.md  pyproject.toml
.ai/graphite-feature/: Plan.md
.ai/graphite-feature/tasks/: task-01.md  task-04.md  task-05.md  task-06.md  task-07.md  task-09.md  task-10.md  task-11.md  task-14.md  task-15.md  task-17.md  task-18.md  task-19.md  task-20.md  task-21.md  task-22.md  task-23.md  task-24.md  task-25.md
.ai/review-fixes/: Plan.md
.ai/review-fixes/tasks/: task-01.md  task-02.md  task-03.md  task-04.md  task-05.md  task-06.md  task-07.md
.ai/testing infra/: Plan.md
.ai/track-command/: Plan.md
.ai/track-command/tasks/: task-01.md  task-02.md  task-03.md  task-04.md  task-05.md
gitstacker/: __init__.py  cli.py  git_ops.py  github.py  journal.py  output.py  prompts.py  store.py
gitstacker/commands/: aliases.py  completions.py  create.py  delete.py  diff.py  freeze.py  init.py  log.py  modify.py  navigate.py  restack.py  stack.py  status.py  submit.py  sync.py  track.py  trunk.py  undo.py
tasks/: task-02.md  task-03.md  task-08.md  task-12.md  task-13.md  task-16.md
tests/: __init__.py  conftest.py
tests/e2e/: test_full_workflow.py
tests/integration/: test_create.py  test_delete.py  test_diff.py  test_dirty_tree.py  test_init.py  test_log_status.py  test_navigate.py  test_restack.py  test_stack_mgmt.py  test_submit.py  test_sync.py  test_trunk.py
tests/unit/: test_git_ops.py  test_github_comments.py  test_store.py
